--- a/charts/ticketmaster/templates/catalog.yaml
+++ b/charts/ticketmaster/templates/catalog.yaml
@@ -19,9 +19,9 @@ spec:
           imagePullPolicy: {{ .Values.catalog.image.pullPolicy }}
           ports:
             - containerPort: 8080
-          env:
+         env:
             - name: ConnectionStrings__DefaultConnection
-              value: "Host=ticketmaster-db;Port=5432;Database=catalogdb;Username=postgres;Password={{ .Values.postgresql.password }};"
+              value: {{ .Values.catalog.connectionString | quote }}
 ---
 apiVersion: v1
 kind: Service
