--- a/src/charts/ticketmaster/templates/redis.yaml
+++ b/src/charts/ticketmaster/templates/redis.yaml
@@ -14,14 +14,14 @@ spec:
     spec:
       containers:
         - name: redis
-          image: "{{ .Values.redis.image.repository }}:{{ .Values.redis.image.tag }}"
+          image: redis:alpine
           ports:
             - containerPort: 6379
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: ticketmaster-redis
+  name: ticketmaster-redis # EZ LESZ A NEVE
 spec:
   ports:
     - port: 6379
