--- a/src/charts/ticketmaster/templates/configmap.yaml
+++ b/src/charts/ticketmaster/templates/configmap.yaml
@@ -3,8 +3,8 @@ kind: ConfigMap
 metadata:
   name: ticketmaster-config
 data:
-  # Itt tároljuk a RabbitMQ címét, ami nem titkos
-  rabbit-host: {{ .Values.analytics.rabbitHost | default "rabbitmq" }}
-  # Itt tárolhatjuk a DB hostokat is
+  # Szolgáltatásnevek (ezek nem titkosak)
+  rabbit-host: "rabbitmq"
   postgres-host: "ticketmaster-db"
   mongo-host: "ticketmaster-mongo"
+  redis-host: "ticketmaster-redis"
