--- a/src/charts/ticketmaster/templates/secret.yaml
+++ b/src/charts/ticketmaster/templates/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ticketmaster-secret
 type: Opaque
 stringData:
-  # A jelszavakat ide szervezzük ki
+  # Jelszavak (a Helm automatikusan titkosítja/kódolja őket)
   rabbit-user: "guest"
   rabbit-pass: "guest"
   postgres-user: "postgres"
