--- a/src/AnalyticsService/appsettings.json
+++ b/src/AnalyticsService/appsettings.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "MongoDb": "mongodb://ticket-mongo:27017"
+  },
+  "RabbitMQ": {
+    "Host": "ticket-rabbit",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
