--- a/src/charts/ticketmaster/templates/booking.yaml
+++ b/src/charts/ticketmaster/templates/booking.yaml
@@ -63,6 +63,10 @@ spec:
                 secretKeyRef:
                   name: ticketmaster-secret
                   key: rabbit-pass
+           
+            # ... (a többi env változó után)
+            - name: JWT__Key
+              value: "EzEgyNagyonHosszuEsTitkosKulcsAmiLegalabb32Karakter2026"
 ---
 apiVersion: v1
 kind: Service
