--- a/src/CatalogService/Dockerfile
+++ b/src/CatalogService/Dockerfile
@@ -1,18 +1,34 @@
 # 1. Fázis: Build (SDK képfájl használata a fordításhoz)
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-WORKDIR /src
+#FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+#WORKDIR /src
 
 # Csak a projektfájlt másoljuk először (cache miatt gyorsabb lesz a rebuild)
-COPY ["CatalogService.csproj", "./"]
-RUN dotnet restore "CatalogService.csproj"
+#COPY ["CatalogService.csproj", "./"]
+#RUN dotnet restore "CatalogService.csproj"
 
 # A többi fájl másolása és build
-COPY . .
-RUN dotnet publish "CatalogService.csproj" -c Release -o /app/publish /p:UseAppHost=false
+#COPY . .
+#RUN dotnet publish "CatalogService.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 # 2. Fázis: Futás (Kisebb, Runtime képfájl)
+#FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
+#WORKDIR /app
+#EXPOSE 8080
+#COPY --from=build /app/publish .
+#ENTRYPOINT ["dotnet", "CatalogService.dll"]
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+WORKDIR /src
+COPY ["TicketMaster.sln", "./"]
+COPY ["CatalogService/CatalogService.csproj", "CatalogService/"]
+RUN dotnet restore "CatalogService/CatalogService.csproj"
+COPY . .
+WORKDIR "/src/CatalogService"
+RUN dotnet build "CatalogService.csproj" -c Release -o /app/build
+
+FROM build AS publish
+RUN dotnet publish "CatalogService.csproj" -c Release -o /app/publish /p:UseAppHost=false
+
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
-EXPOSE 8080
-COPY --from=build /app/publish .
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "CatalogService.dll"]
